crates/ink/tests/ui/event/fail/multiple_anonymous_args_inline.rs
#[ink::event]
#[ink(anonymous, anonymous)]
pub struct Event {
    #[ink(topic)]
    pub topic: [u8; 32],
}

fn main() {}